tweaks to interface and cleaning old files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div id="wrapper">
-  <div id="app"></div>
+  <div id="app" class="basic"></div>
 </div>
 <!-- partial -->
   <script src='https://npmcdn.com/react@15.2.1/dist/react.min.js'></script>
